<resources>
    <string name="app_name">Shooting Archery</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_section1">Score récent</string>
    <string name="title_section2">Nouvelle partie</string>
    <string name="interieur">Intérieur</string>
    <string name="exterieur">Extérieur</string>
    <string name="distance">Distance</string>
    <string name="nbVolees">"Nombre(s) de volée(s) : "</string>
    <string name="nbFleches">Nombres de flèches</string>
    <string name="entrainement">Entrainement</string>
    <string name="competition">Compétition</string>
    <string name="title_activity_accueil">Shooting Archery</string>
    <string name="nouvelle_seance">Nouvelle séance</string>
    <string name="parcourir">Chercher une partie</string>
    <string name="distance_en_m">Distance (en m) :</string>
    <string name="progressbar">progressBar</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_config1">Utilisateur (1/3)</string>
    <string name="title_activity_config2">Type de cible (2/3)</string>
    <string name="title_activity_config3">Placement, flèches (3/3)</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>
    <string name="progress">Progress</string>
    <string name="_0">0</string>
    <string name="title_activity_in_game">Scores actuels</string>
    <string name="action_photo">Prendre une photo</string>
    <string name="action_finseance">Fin de séance</string>
    <string name="choix_cible">Choix cible :</string>
    <string name="taille_cible">Taille cible :</string>
    <string name="cm">cm</string>
    <string name="choix_piquet"> Choix du Piquet de tir : </string>
    <string name="exit_question">Quitter ?</string>
    <string name="sureToQuit">Êtes-vous sur de quitter ? La partie ne sera pas sauvegardée.</string>
    <string name="notif_txt">Touchez pour revenir au tableau des scores.</string>
    <string name="error">Erreur</string>
    <string name="no_score_upload">Pas de scores à envoyer. Terminez une séance pour décharger les données.</string>
    <string name="ok">OK</string>
    <string name="add_user">Ajouter un utilisateur</string>
    <string name="title_activity_picture">Lecture de la cible</string>
    <string name="confirmGameEnd">Êtes-vous sur d\'avoir terminé votre cible ?</string>
    <string name="checkOngoingGame">Une partie est en cours. Voulez-vous la continuer ? Si vous décidez d\'annuler, elle sera effacée.</string>
    <string name="cancel">Annuler</string>
    <string name="erreur_supperieur">Veuillez entrer une valeur correcte entre 40 et 200 cm de diamètre</string>
    <string name="edit">Modifier</string>
    <string name="valider">Valider</string>
    <string name="erreur_valeur_nul">Remplissez le champ Taille cible pour continuer</string>
    <string name="erreur_radio_non_check">Choisissez une cible pour continuer</string>
    <string name="int_ext_error">Veuillez choisir si vous êtes en intérieur ou en extérieur !</string>
    <string name="distance_error">La distance doit être différente de 0.</string>
    <string name="volees_error">Le nombre de volées doit être différent de 0.</string>
    <string name="nbcible_error">Veuillez sélectionner un nombre de cible.</string>
    <string name="numcible_error">Le numéro de cible doit être compris entre 1 et </string>
    <string name="manches_error">Le nombre de manches doit être différent de 0.</string>
    <string name="nbfleche_error">Veuillez saisir le nombre de flèches.</string>
    <string name="piquet_error">Veuillez choisir un Piquet.</string>
    <string name="type_cible_error">Veuillez choisir un type de Cible.</string>
    <string name="conditions_error">Vous devez choisir les conditions : entrainement ou compétition.</string>
    <string name="erreur">Erreur</string>
    <string name="title_activity_manual_score">Score manuel</string>
    <string name="accueil_libscorerecent">Scores récents</string>
    <string name="attention">Attention</string>
    <string name="toomanyplay">Impossible de continuer, vous avez déjà tiré toutes les manches.</string>
    <string name="toomanyplaycamp">Impossible de continuer, vous avez déjà tiré toutes les volées.</string>
    <string name="tabbot_totalpartie">Total de la partie</string>
    <string name="tabtop_numero">N°</string>
    <string name="tabtop_pointsparfleches">Points par flèches</string>
    <string name="tabtop_totalvolee">Total\nvolée</string>
    <string name="tabtop_totalcumule">Total\ncumulé</string>
    <string name="typeCible">Type de cible :</string>
    <string name="distanceCible">Distance de la cible :</string>
    <string name="metresUnite">m</string>
    <string name="tailleCible">Taille de la cible :</string>
    <string name="en">en</string>
    <string name="nbManches">Nombre de manches</string>
    <string name="total_de_la_manche">Total de la manche</string>
    <string name="total_entrainement">Total de l\'entraînement</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_sort">Rechercher une partie</string>
    <string name="title_activity_sort_result">Résultat de recherche</string>
    <string name="ajouter_une_condition">Ajouter une condition</string>
    <string name="title_activity_view_game">Afficher une partie</string>
    <string name="share">Partager</string>
    <string name="delete">Supprimer</string>
    <string name="save">Enregistrer</string>
    <string name="gamereport">Rapport de partie</string>
    <string name="points">points</string>
    <string name="description">Description</string>
    <string name="typecible">Type de cible</string>
    <string name="blason">Blason</string>
    <string name="trispot">Trispot</string>
    <string name="classique">Classique</string>
    <string name="manche">Manche</string>
    <string name="delete_game">Supprimer la partie</string>
    <string name="delete_game_confirm">Êtes-vous sûr de supprimer la partie ? Cette opération ne peut être annulée.</string>
    <string name="saved_file_message">Le fichier %1$s a été enregistré dans le dossier %2$s.\n\nVous pouvez le récuperer en connectant votre appareil à un ordinateur.</string>
    <string name="no_user_inside">Pas d\'utilisateur enregistré, veuillez renseigner votre identité.</string>
    <string name="name_not_be_null">Nom ne doit pas être vide !</string>
    <string name="prenom_not_null">Prénom ne doit pas être vide !</string>
    <string name="nom_arc_not_null">Le nom de l\'arc ne doit pas être vide !</string>
    <string name="delete_user">Supprimer un utilisateur</string>
    <string name="nombre_6">Nombre\nde 6</string>
    <string name="nombre_5">Nombre\nde 5</string>
    <string name="edit_user">Modifier un utilisateur...</string>
    <string name="reset_db">Réinitialiser la base de données</string>
    <string name="data">Données</string>
    <string name="about">À propos</string>
    <string name="moyenne">Moyenne</string>
    <string name="cible">Cible</string>
    <string name="txt_conseil_intro_tir">Voici quelques conseils pour bien réussir vos tirs. Choississez un point à éclaircir</string>
    <string name="btn_tir_echauf">L\'échauffement</string>
    <string name="btn_tir_secu">La sécurité</string>
    <string name="titre_echauf">Avant de tirer</string>
            <string name="txt_echauf">Avant tout effort physique, il est très important d\'échauffer nos muscles.
                Suivez ces étapes pour garantir un entrainement ou une compétition en pleine forme : </string>
            <string name="liste_echauf"> - Petites rotations du cou avec douceur. \n \n
                                        - Rotations des épaules, 5 fois en avant et 5 fois en arrières. \n \n
                                        - Rotations du bassin dans un sens puis dans l\'autre.\n \n
                                        - Rotations des chevilles, 5 rotations sens horaire et 5 rotations sens anti-horaire.\n \n
                                        - Rotations des poignets, 5 rotations sens horaire et 5 rotations sens anti-horaire.\n \n
                                        - Pour finir, bouger vos poignets dans tous les sens.\n \n
            </string>
    <string name="titre_etir">Après avoir tiré</string>
    <string name="txt_etir">Après votre entrainement ou compétition, prenez du temps pour vous étirer convenablement, celà vous évitera des douleurs ulterieurs.</string>
            <string name="liste_etir">
                 - Laissez tomber vos mains vers le sol pour essayer de le toucher, en expirant  profondément. \n \n
                - Tendez votre bras et tirez sur vos doigts contre vous \n \n
                - Joindre les mains au-dessus de la tête et pivoter à droite puis à gauche. \n \n
            </string>
    <string name="txt_secu">Lorsque l\'on fait du tir à l\'arc, il faut suivre certaines règles pour garantir la sécurité de tous. Voici, une liste des principales règles à respecter </string>
            <string name="liste_collectif">
                - Ne jamais pointer un arc vers quelqu\'un, avec ou sans flèche.\n \n
                - Ne jamais toucher un archer en position de tir.\n \n
                - Les archers doivent toujours être situés sur une seule ligne de tir.\n \n
                - Ne jamais tirer avec du matériel endommagé.\n \n
                - Les archers doivent toujours se retirer de plusieurs pas derrière la ligne de tir après leur volée.\n \n
                - Attendre que tout les archers aient fini leur tir avant de chercher les flèches. \n \n
                - Toute position de tir devrait assurer le libre passage de la corde. Le port de vêtement ajusté est conseillé.\n \n
                - Ne pas se servir de flèches trop courtes.\n \n
                - En allonge, ne jamais lâcher une corde sans flèche. Les risques de rupture du matériel sont très importants.\n \n
                - Ne pas arracher ses flèches en même temps qu\'un autre archer sur la cible. Il y risque de blesser l\'archer ou d\'être blessé au visage par l\'encoche d\'une flèche.\n \n
            </string>
            <string name="txt_conseil_intro_reg">Dans cette partie vous pourrez voir les différents réglages de base
                à faire à votre arc. Veuillez essayer de suivre l\'ordre indiquer</string>
    <string name="btn_reg_band">1 : Réglage du Band</string>
    <string name="txt_descri_band">Le band est la distance entre votre corde et la poignée de l’arc.</string>
    <string name="txt_reg_band">Régler le band en vous référent au tableau ci-dessous</string>
    <string name="btn_reg_tiller">2 : Réglage du Tiller</string>
            <string name="txt_descri_tiller">Le tiller est la distance d\'une part entre la corde et la base de la
                branche et d\'autre part entre la corde et la branche du bas </string>
            <string name="txt_reg_tiller">Pour bien régler le tiller, il faut que la différence entre les deux distances doit
                être égale à environ -6mm au niveau de la branche du bas.</string>
    <string name="btn_reg_detallonage">3 : Réglage du détalonnage</string>
    <string name="txt_descri_deta">Le détalonnage est l\'endroit où vous devez clipser l\'encoche de votre flèche sur la corde. Pour le régler correctement, montez le à +5 à 6mm du point zéro</string>
    <string name="btn_reg_berger">4 : Réglage du Berger Bouton</string>
    <string name="txt_descri_bb">Le berger bouton est un matériel servant à diminuer la distorsion de la flèche, lors de son lancé</string>
            <string name="txt_reg_bb">Pour régler le berger bouton, réglez d\'abord votre corde pour qu\'elle soit alignée avec le viseur et votre flèche.
            Puis tirez des flèches de 5m à 30m en reculant de 5m à chaque fois. Ensuite comparez votre volée avec le schéma ci-dessus et réglez votre Berger Bouton</string>
</resources>