<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shootingarchery="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/action_share"
        shootingarchery:showAsAction="always"
        android:showAsAction="always"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/action_discard"
        shootingarchery:showAsAction="ifRoom"
        android:showAsAction="ifRoom"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/action_save"
        shootingarchery:showAsAction="always"
        android:showAsAction="always"
        android:title="@string/save">
    </item>

</menu>