<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shootingarchery="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cancelPicture"
        android:orderInCategory="100"
        shootingarchery:showAsAction="ifRoom"
        android:showAsAction="ifRoom"
        android:icon="@drawable/cancel"
        android:title="@string/cancel" />

    <item
        android:id="@+id/action_editPicture"
        android:orderInCategory="100"
        shootingarchery:showAsAction="always"
        android:showAsAction="always"
        android:icon="@drawable/edit"
        android:title="@string/edit" />

    <item
        android:id="@+id/action_okPicture"
        android:orderInCategory="100"
        shootingarchery:showAsAction="always"
        android:showAsAction="always"
        android:icon="@drawable/action_accept"
        android:title="@string/valider" />

</menu>
