<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dip"
        android:background="#FF909090" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6" >

            <TextView
                android:id="@+id/tabmid_f3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".16"
                android:gravity="center"
                android:text="@string/tabtop_numero" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tabmid_f6"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tabtop_pointsparfleches" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tabmid_nomanche"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1" />

                    <TextView
                        android:id="@+id/tabbot_sum"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="2" />

                    <TextView
                        android:id="@+id/tabmid_f2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="3" />


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tabmid_f4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".16"
                android:gravity="center"
                android:text="@string/tabtop_totalvolee"
                android:textColor="@color/totalvolee" />

            <TextView
                android:id="@+id/tab_midf5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".16"
                android:gravity="center"
                android:text="@string/tabtop_totalcumule" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:weightSum="5" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/moyenne"
                android:textColor="@color/moyenne" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cible"
                android:textColor="@color/moyenne" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance"
                android:textColor="@color/moyenne" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nombre_6"
                android:textColor="@color/titre1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nombre_5"

            android:textColor="@color/nb9" />
    </LinearLayout>

</LinearLayout>

<View
    android:layout_width="wrap_content"
    android:layout_height="2dip"
    android:background="#FF909090" />

</LinearLayout>